Remove observer in OnConnectionClosed

- Remove observer in OnConnectionClosed instead of Shutdown. Shutdown is
  called in different life cycle. OnConnectionReady can be called more
  than once for a single Shutdown call. It can cause helper bridge to
  register observer more than once.

Bug: 833731
Test: None
Change-Id: I7057f8d11364687f0d7f9fb5d3b5d213a18e18db
Reviewed-on: https://chromium-review.googlesource.com/1018781
Reviewed-by: David Tseng <dtseng@chromium.org>
Commit-Queue: Yuki Awano <yawano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552236}
Former-commit-id: 2b11dda5b4aad2b1172332b819c536c8e65cc9ee